--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <snandr-root>Loading...</app-root>
+  <snandr-root>Loading...</snandr-root>
 </body>
 </html>
