new gh-pages version

--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <snandr-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.af9d2d303c21b9463fd6.bundle.js"></script><script type="text/javascript" src="main.15b60e60c8c1d1009c50.bundle.js"></script></body>
+  <snandr-root>Loading...</snandr-root>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.c3e32a1c76e43dda4ced.bundle.js"></script><script type="text/javascript" src="main.f6d65efb6fcb1490afa3.bundle.js"></script></body>
 </html>
